--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,11 @@ jobs:
         
       - name: Set chart version from tag
         id: version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          OWNER_LOWER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "OWNER_LOWER=$OWNER_LOWER" >> $GITHUB_OUTPUT
 
       - name: Login to Container Registry
         uses: docker/login-action@v3
@@ -45,7 +49,7 @@ jobs:
       - name: Push chart to OCI registry
         run: |
           helm push openclaw-helm-chart-${{ steps.version.outputs.VERSION }}.tgz \
-            oci://${{ env.REGISTRY }}/${{ github.repository_owner | lower }}/openclaw-helm-chart
+            oci://${{ env.REGISTRY }}/${{ steps.version.outputs.OWNER_LOWER }}/openclaw-helm-chart
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -57,7 +61,7 @@ jobs:
             ## Installation
             
             ```bash
-            helm pull oci://${{ env.REGISTRY }}/${{ github.repository_owner | lower }}/openclaw-helm-chart \
+            helm pull oci://${{ env.REGISTRY }}/${{ steps.version.outputs.OWNER_LOWER }}/openclaw-helm-chart \
               --version ${{ steps.version.outputs.VERSION }}
             
             helm install openclaw ./openclaw-helm-chart-${{ steps.version.outputs.VERSION }}.tgz
@@ -65,6 +69,6 @@ jobs:
             
             Or install directly:
             ```bash
-            helm install openclaw oci://${{ env.REGISTRY }}/${{ github.repository_owner | lower }}/openclaw-helm-chart \
+            helm install openclaw oci://${{ env.REGISTRY }}/${{ steps.version.outputs.OWNER_LOWER }}/openclaw-helm-chart \
               --version ${{ steps.version.outputs.VERSION }}
             ```
